--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "express-session": "^1.18.0",
     "json": "^11.0.0",
     "method-override": "^3.0.0",
-    "mssql": "^11.0.1",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.13.0"
   },
   "name": "gavinacostaserver",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon app.js"
+    "devStart": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
